-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17, 18
-
Component/s: hotspot
-
b30
-
x86_64, aarch64
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8279809 | 19 | Roland Westrelin | P3 | Resolved | Fixed | b04 |
| JDK-8279764 | 18.0.1 | Roland Westrelin | P3 | Resolved | Fixed | b02 |
| JDK-8280708 | 17.0.4-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8282820 | 17.0.4 | Martin Doerr | P3 | Resolved | Fixed | b01 |
applications/microbenchmarks/indy/Test_3.java#id20
applications/microbenchmarks/other/Test_12.java#id0
I've started this bug off as confidential because the tests are
closed. However, after triage by the Compiler team, this bug
can be change into non-confidential if appropriate.
Here's the crashing thread's stack from Test_3.java#id20:
--------------- T H R E A D ---------------
Current thread (0x00007fd0b80b2870): JavaThread "C2 CompilerThread3" daemon [_thread_in_native, id=25560, stack(0x00007fd0cfafb000,0x00007fd0cfbfc000)]
Current CompileTask:
C2: 1671 721 ! java.lang.invoke.LambdaForm$MH/0x0000000801028000::guardWithCatch (83 bytes)
Stack: [0x00007fd0cfafb000,0x00007fd0cfbfc000], sp=0x00007fd0cfbf6e70, free space=1007k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x8b26bb] LateInlineMHCallGenerator::do_late_inline_check(Compile*, JVMState*)+0x5b
V [libjvm.so+0x8aee8f] CallGenerator::do_late_inline_helper()+0xadf
V [libjvm.so+0xa8979d] Compile::inline_incrementally_one()+0x33d
V [libjvm.so+0xa89aff] Compile::inline_incrementally(PhaseIterGVN&)+0x18f
V [libjvm.so+0xa8a759] Compile::Optimize()+0x5e9
V [libjvm.so+0xa8d3fe] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x159e
V [libjvm.so+0x8a5d24] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x664
V [libjvm.so+0xa9d6f8] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xc88
V [libjvm.so+0xa9e4b8] CompileBroker::compiler_thread_loop()+0x648
V [libjvm.so+0x1925aba] JavaThread::thread_main_inner()+0x25a
V [libjvm.so+0x192de80] Thread::call_run()+0x100
V [libjvm.so+0x1610214] thread_native_entry(Thread*)+0x104
Here's the crashing stack trace from Test_12.java#id0:
--------------- T H R E A D ---------------
Current thread (0x00007f2da4107ed0): JavaThread "C2 CompilerThread3" daemon [_thread_in_native, id=13403, stack(0x00007f2ddc1a6000,0x00007f2ddc2a7000)]
Current CompileTask:
C2: 3828 827 ! java.lang.invoke.LambdaForm$MH/0x0000000801027800::tryFinally (77 bytes)
Stack: [0x00007f2ddc1a6000,0x00007f2ddc2a7000], sp=0x00007f2ddc2a1e70, free space=1007k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x8b26bb] LateInlineMHCallGenerator::do_late_inline_check(Compile*, JVMState*)+0x5b
V [libjvm.so+0x8aee8f] CallGenerator::do_late_inline_helper()+0xadf
V [libjvm.so+0xa8979d] Compile::inline_incrementally_one()+0x33d
V [libjvm.so+0xa89aff] Compile::inline_incrementally(PhaseIterGVN&)+0x18f
V [libjvm.so+0xa8a759] Compile::Optimize()+0x5e9
V [libjvm.so+0xa8d3fe] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x159e
V [libjvm.so+0x8a5d24] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x664
V [libjvm.so+0xa9d6f8] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xc88
V [libjvm.so+0xa9e4b8] CompileBroker::compiler_thread_loop()+0x648
V [libjvm.so+0x1925aba] JavaThread::thread_main_inner()+0x25a
V [libjvm.so+0x192de80] Thread::call_run()+0x100
V [libjvm.so+0x1610214] thread_native_entry(Thread*)+0x104
- backported by
-
JDK-8279764 two microbenchmarks tests fail "assert(!jvms->method()->has_exception_handlers()) failed: no exception handler expected" after JDK-8275638
-
- Resolved
-
-
JDK-8279809 two microbenchmarks tests fail "assert(!jvms->method()->has_exception_handlers()) failed: no exception handler expected" after JDK-8275638
-
- Resolved
-
-
JDK-8280708 two microbenchmarks tests fail "assert(!jvms->method()->has_exception_handlers()) failed: no exception handler expected" after JDK-8275638
-
- Resolved
-
-
JDK-8282820 two microbenchmarks tests fail "assert(!jvms->method()->has_exception_handlers()) failed: no exception handler expected" after JDK-8275638
-
- Resolved
-
- relates to
-
JDK-8275638 GraphKit::combine_exception_states fails with "matching stack sizes" assert
-
- Closed
-
- links to
-
Commit
openjdk/jdk17u-dev/f820a3c3
-
Commit
openjdk/jdk18/e7244c19
-
Review
openjdk/jdk17u-dev/201
-
Review
openjdk/jdk18/78