src/hotspot/share/opto/callGenerator.cpp
@@ -420,7 +420,9 @@ bool LateInlineMHCallGenerator::do_late_inline_check(Compile* C, JVMState* jvms)
   // expression stacks which causes late inlining to break. The MH invoker is not expected to be called from a method wih
   // exception handlers. When there is no exception handler, GraphKit::builtin_throw() pops the stack which solves the issue
   // of late inlining with exceptions.
-  assert(!jvms->method()->has_exception_handlers(), "no exception handler expected");
+  assert(!jvms->method()->has_exception_handlers() ||
+         (method()->intrinsic_id() != vmIntrinsics::_linkToVirtual &&
+          method()->intrinsic_id() != vmIntrinsics::_linkToInterface), "no exception handler expected");
   // Even if inlining is not allowed, a virtual call can be strength-reduced to a direct call.
   bool allow_inline = C->inlining_incrementally();
   bool input_not_const = true;
